# knute-orchestrator

./: Cargo.toml  README.md
.knute/: state.json
src/: app.rs  cli.rs  context.rs  editor.rs  event.rs  main.rs  message.rs  model.rs  notes.rs  store.rs  terminal.rs
src/claude/: mod.rs  plan.rs  process.rs  stream.rs
src/ui/: autocomplete.rs  changes_view.rs  dialog.rs  embedded_terminal.rs  generate.rs  mod.rs  new_note.rs  new_session.rs  note_view.rs  session_view.rs  sidebar.rs  status_bar.rs  sub_agent.rs  theme.rs  worktree_view.rs
src/worktree/: git.rs
